fix spacing between board and chat

--- a/app/play/play.module.css
+++ b/app/play/play.module.css
@@ -3,7 +3,7 @@
 	flex-wrap: wrap;
 	min-height: 100svh;
 	padding: 8px;
-	gap: 32px;
+	gap: 64px;
 	justify-content: center;
 	align-items: center;
 }
@@ -24,6 +24,9 @@
 	.chat {
 		margin: 0;
 		height: unset;
+	}
+	.game {
+		gap: 16px;
 	}
 }
 
